--- a/docs/style.css
+++ b/docs/style.css
@@ -1,147 +1,153 @@
-body {
-    background: #7BAFAE;
-    padding: 5px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-family: Arial, sans-serif;
-}
-
-header {
-    text-align: center;
-    background-color: #CA7FAB;
-    padding: 20px;
-    margin-bottom: 20px;
-}
-
-.Comparación_actual,
-#enlace-seccion {
-    width: 80%;
-    max-width: 80px;
-    margin-bottom: 8px;
-}
-
-ul {
-    list-style-type: none;
-    padding: 10;
-}
-
-li {
-    margin-bottom: 20px;
-}
-
-header img {
-    margin-top: 10px;
-    border: 10px solid #FEE6FF;
-    border-radius: 8px;
-    overflow: hidden;
-    width: 100%;
-    max-width: 150px; /* Ajusta el tamaño máximo de la foto */
-}
-
-#enlace-seccion a {
-    color: fuchsia;
-    text-decoration: underline;
-}
-
-
-    body {
-      margin: 0;
-      padding: 0;
-    }
-
-    header {
-      position: relative;
-      text-align: center;
-      color: #fff;
-      padding: 20px;
-      margin-top: -70px; 
-
-    }
-
-    header h1 {
-      margin: 0;
-      font-size: 48px;
-    }
-
-    img {
-      width: 100%;
-      height: auto;
-      display: block;
-    }
-
-    body {
+* {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
-header {
+body {
+    font-family: arial ,bold , sans-serif;
+    margin: 0;
+    background-color:#7BAFAE;
+}
+
+a{
+  text-decoration: none;
+  color: black;
+}
+
+header { 
+  display: flex;
+  height: 70px;
   background-color: #F6937B;
-  color: #fff;
-  padding: 10px;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px;
+  margin: 0;
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+}
+
+.logo img{
+  height: 69px;
+  margin-right: 10px;
+}
+
+nav a{
+  font-weight: 600;
+  padding-right: 10px;
+}
+
+nav a:hover{
+  color: white;
+}
+
+.banner {
+  background-image: url(banner.png);
+  height: 27rem;
+  background-size: cover;
+  background-position: center;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.content-banner {
+  max-width: 90rem;
+  margin-top: 170px;
+  margin-bottom: 0;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 20px; 
+  background-color: #FCD4C3; 
   text-align: center;
 }
 
-nav ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
+.content-banner h2 {
+  margin-top: 10px;
+  color:#F6937B
+
 }
 
-nav li {
-  display: inline;
-  margin-right: 20px;
+.content-banner .destacado {
+  
+  color: #CB724C;
 }
 
-nav a {
-  text-decoration: none;
-  color: #fff;
-  font-weight: bold;
-  font-size: 16px;
+
+.el-proyecto {
+  background-color: #FCD4C3;
+  padding: 25px;
+  text-align: center;
+  margin: 20px 20px;
 }
 
-/* menú */
-body {
-    margin: 0;
-    padding: 0;
-  }
+.el-proyecto h2 {
+  margin-bottom: 10px;
+}
+
+.reportaje {
+  background-color: #FCD4C3;
+  padding: 25px;
   
-  header {
-    background-color: #F6937B;
-    color: #fff;
-    padding: 40px;
-    text-align: center;
-  }
-  
-  nav ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-  }
-  
-  nav li {
-    display: inline;
-    margin-right: 15px;
-  }
-  
-  nav {
-    text-align: left; /* Alinea el texto a la izquierda */
-  }
-  
-  nav a {
-    text-decoration: none;
-    color: #fff;
-    font-weight: bold;
-    font-size: 16px;
-    transition: color 0.3s ease;
-  }
-  
-  nav a:hover {
-    color: #ffd700;
-  }
-  
-  .bloque-color {
-    background-color: #FCD4C3;
-    padding: 20px; /* Ajusta este valor según tus necesidades para el espacio interno */
-    border-radius: 10px; /* Añade un radio de borde para esquinas suavizadas */
+  margin: 20px 20px;
+}
+
+.reportaje h2 {
+  margin-bottom: 20px;
+  align-items: center;
+}
+
+.reportaje h1 {
+  margin-bottom: 20px; 
+  align-items: center;
+}
+
+.reportaje img {
+  display: block; 
+  margin: 0 auto; 
+  padding: 1cm; 
+  border: 10px solid transparent; 
+}
+
+.reportaje p {
+  margin-bottom: 15px; 
+}
+
+.doscolumnas {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+  margin: 0 -0.5cm; 
+}
+
+.reportaje2 {
+  flex: 0 0 calc(50% - 1cm); 
+  background-color: #F6937B;
+  box-sizing: border-box; 
+  padding: 25px;
+  margin: 20px 20px;
+}
+.grafico1 {
+  background-color: #F6937B;
+  flex: 0 0 calc(50% - 0.5cm); 
+}
+
+h2 {
+  color: #333;
+}
+
+p {
+  line-height: 1.5;
+  color: #666;
+}
+
+.grafico1 {
+  max-width: 100%;
+  height: auto;
+  display: block;
 }
